# StorageSystem

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: android.yml  backend.yml  dashboard.yml  release.yml
android/: build.gradle.kts  debug.keystore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/storagesystem/: MainActivity.kt
android/app/src/main/java/com/storagesystem/data/: ServerSettings.kt
android/app/src/main/java/com/storagesystem/data/api/: ApiClient.kt  WebSocketClient.kt
android/app/src/main/java/com/storagesystem/data/models/: Models.kt
android/app/src/main/java/com/storagesystem/data/repository/: InventoryRepository.kt
android/app/src/main/java/com/storagesystem/ui/: MainViewModel.kt  ScannerScreen.kt
android/app/src/main/java/com/storagesystem/ui/camera/: QrAnalyzer.kt
android/app/src/main/java/com/storagesystem/ui/components/: CameraPreview.kt  ContainerSelectionSheet.kt  (+3 more)
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: themes.xml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .env.example  Cargo.toml  Dockerfile  build.rs
backend/migrations/: 001_initial_schema.sql  002_tags.sql  003_lcsc_fields_orders.sql  004_unique_pbn.sql  005_no_dedup.sql
backend/src/: dashboard.rs  db.rs  handlers.rs  lcsc_client.rs  main.rs  models.rs  websocket.rs
dashboard/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css  store.ts  theme.css
dashboard/src/components/: BagTable.tsx  ConnectionStatus.tsx  LayerSidebar.tsx
dashboard/src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx
dashboard/src/hooks/: use-websocket.ts
dashboard/src/lib/: api.ts
