[package]
name = "storage-backend"
version = "0.1.51"
edition = "2021"
description = "High-Density Inventory Tracking System - Rust Backend"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors"] }

sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "sqlite", "chrono", "uuid"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
sha1 = "0.11"
hex = "0.4"
rand = "0.10"
anyhow = "1"
futures = "0.3"
tower = { version = "0.5", features = ["util"] }
rust-embed = "8"
mime_guess = "2"
